--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "daisyui": "^4.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
